--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest # 使用最新的 Ubuntu 运行器
     strategy:
       matrix:
-        pg_version: ['15', '16', '17', '18', 'latest'] # 定义要构建的 PostgreSQL 版本
+        pg_version: ['17'] # 定义要构建的 PostgreSQL 版本
 
     steps:
       # 第一步：检出代码
