修改自动构建时间

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -17,14 +17,14 @@ name: Build and Push Docker Image
 on:
   workflow_dispatch: # 允许手动触发
   schedule:
-    - cron: '0 0 * * *' # 每天 UTC 00:00 运行
+    - cron: '0 5 * * 0' # 每周日 UTC 05:00 运行
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest # 使用最新的 Ubuntu 运行器
     strategy:
       matrix:
-        pg_version: ['17'] # 定义要构建的 PostgreSQL 版本
+        pg_version: ['15','16','17','17','18','latest'] # 定义要构建的 PostgreSQL 版本
 
     steps:
       # 第一步：检出代码
