--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -98,8 +98,8 @@ jobs:
           # 从上一步动态获取镜像标签
           tags: ${{ steps.meta.outputs.IMAGE_TAGS }}
           
-          build-args: | # 传递给 Dockerfile 的构建参数
-            version=${{ steps.meta.outputs.DOCKERFILE_VERSION_ARG }} # 使用上一步动态设置的版本号
+          build-args: | # 传递给 Dockerfile 的构建参数  # 使用上一步动态设置的版本号
+            version=${{ steps.meta.outputs.DOCKERFILE_VERSION_ARG }}
             # 您也可以在这里覆盖 APT 镜像和 GitHub 代理，例如:
             # APT_MIRROR=http://mirrors.aliyun.com
             # GITHUB_PROXY_PREFIX=https://ghproxy.com/
